Name: agent
Version: 0.0
Author: Tomasz Wroblewski
Build-Type: Simple
Cabal-Version: >= 1.2

Executable agent
  hs-source-dirs: ../common .
  Main-is: Agent.hs
  Extensions: GeneralizedNewtypeDeriving, GADTs, ExistentialQuantification, MultiParamTypeClasses, RankNTypes, PatternGuards, ForeignFunctionInterface, FlexibleContexts,FlexibleInstances
  Build-Depends:
        base >= 3 && < 5,
        mtl,
        old-time,
        binary,
        data-binary-ieee754,
        containers,
        split,
        bytestring,
        utf8-string,
        network,
        network-bytestring,
        MonadPrompt
  if os(windows) {
    Build-Depends: Win32
  }
  GHC-Options: -threaded  
  C-Sources: cbits/process-helper.c cbits/input-helper.c
  Extra-Libraries: psapi
