Name: bot
Version: 0.0
Author: Tomasz Wroblewski
Build-Type: Simple
Cabal-Version: >= 1.2

Executable bot
  hs-source-dirs: ../common .
  Main-is: Main.hs             
  Extensions: ScopedTypeVariables,GeneralizedNewtypeDeriving, GADTs, ExistentialQuantification, MultiParamTypeClasses, RankNTypes, PatternGuards, ForeignFunctionInterface, FlexibleContexts,FlexibleInstances
  Build-Depends:
        base >= 3 && < 5,
        mtl,
        old-time,
        binary,
        data-binary-ieee754,
        containers,
        split,
        bytestring,
        utf8-string,
        network,
        network-bytestring,
        MonadPrompt
